kek yang abis diapus tapi di template